Fix header spacing and remove a special character

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -16,6 +16,7 @@ body {
     flex-direction: column;
     flex-grow: 1;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    top: 0px !important;
 }
 
 a {
